--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -152,9 +152,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="evidence\ChromeError.jpg" />
+    <Content Include="evidence\IE10error!.jpg" />
     <Content Include="evidence\FireFoxError.jpg" />
-    <Content Include="evidence\IE10error.jpg" />
+    <Content Include="evidence\Chrome31error.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
